@@ -1,18 +1,23 @@
 package obro1961.chatpatches.chatlog;
 
 import com.google.common.collect.Lists;
-import com.google.gson.Gson;
-import com.google.gson.InstanceCreator;
-import com.google.gson.JsonDeserializer;
-import com.google.gson.JsonSerializer;
+import com.google.gson.JsonElement;
+import com.google.gson.JsonObject;
+import com.google.gson.JsonParseException;
+import com.google.gson.JsonSyntaxException;
+import com.mojang.serialization.Codec;
+import com.mojang.serialization.DynamicOps;
+import com.mojang.serialization.codecs.RecordCodecBuilder;
 import net.fabricmc.loader.api.FabricLoader;
 import net.minecraft.client.MinecraftClient;
 import net.minecraft.client.gui.hud.MessageIndicator;
 import net.minecraft.client.resource.language.I18n;
 import net.minecraft.text.Text;
+import net.minecraft.text.TextCodecs;
+import net.minecraft.util.JsonHelper;
+import net.minecraft.util.Util;
 import obro1961.chatpatches.ChatPatches;
 import obro1961.chatpatches.config.Config;
-import obro1961.chatpatches.util.Flags;
 
 import java.io.IOException;
 import java.nio.charset.Charset;
@@ -20,42 +25,58 @@ import java.nio.charset.MalformedInputException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
-import java.util.List;
+import java.util.ArrayList;
+import java.util.function.Function;
 
+import static obro1961.chatpatches.ChatPatches.LOGGER;
 import static obro1961.chatpatches.ChatPatches.config;
 
 /**
  * Represents the chat log file in the run directory located at {@link ChatLog#PATH}.
+ * Contains methods for serializing, deserializing, accessing, modifying, and
+ * backing up the data.
  */
 public class ChatLog {
     public static final Path PATH = FabricLoader.getInstance().getGameDir().resolve("logs").resolve("chatlog.json");
     public static final MessageIndicator RESTORED_TEXT = new MessageIndicator(0x382fb5, null, null, I18n.translate("text.chatpatches.restored"));
 
-    private static final Gson GSON = new com.google.gson.GsonBuilder()
-        .registerTypeAdapter(Text.class, (JsonSerializer<Text>) (src, type, context) -> Text.Serialization.toJsonTree(src))
-        .registerTypeAdapter(Text.class, (JsonDeserializer<Text>) (json, type, context) -> Text.Serialization.fromJsonTree(json))
-        .registerTypeAdapter(Text.class, (InstanceCreator<Text>) type -> Text.empty())
-    .create();
-
-    private static boolean savedAfterCrash = false;
-    private static ChatLog.Data data = new Data();
-    private static int lastHistoryCount = -1, lastMessageCount = -1;
-
     public static boolean loaded = false;
     public static int ticksUntilSave = config.chatlogSaveInterval * 60 * 20; // convert minutes to ticks
 
+    private static boolean restoring = false;
+    private static ChatLog.Data data = new Data();
+    private static int lastHistoryCount = -1, lastMessageCount = -1;
 
-    /** Micro class for serializing, used separately from ChatLog for simplification */
+
+    /** Simplified serializing class */
     private static class Data {
         public static final String EMPTY_DATA = "{\"history\":[],\"messages\":[]}"; // prevents a few errors if the channel doesn't initialize
         public static final int DEFAULT_SIZE = 100;
+        /**
+         * Codec for serializing and deserializing chat log data.
+         * Has entries for the {@link #messages} and {@link #history},
+         * and calls {@link Codec#xmap(Function, Function)} to make the
+         * lists mutable.
+         */
+        public static final Codec<Data> CODEC = RecordCodecBuilder.create(inst -> inst.group(
+            Codec.list(TextCodecs.CODEC).xmap(ArrayList::new, Function.identity()).fieldOf("messages").forGetter(data -> data.messages),
+            Codec.list(Codec.STRING).xmap(ArrayList::new, Function.identity()).fieldOf("history").forGetter(data -> data.history)
+        ).apply(inst, (messages, history) -> Util.make(new Data(), data -> {
+            data.messages = messages;
+            data.history = history;
+        })));
 
-        public List<Text> messages;
-        public List<String> history;
+        public ArrayList<Text> messages;
+        public ArrayList<String> history;
 
         private Data() {
             messages = Lists.newArrayListWithExpectedSize(DEFAULT_SIZE);
             history = Lists.newArrayListWithExpectedSize(DEFAULT_SIZE);
+        }
+
+        private Data(boolean done) {
+            this();
+            loaded = done;
         }
     }
 
@@ -65,23 +86,28 @@ public class ChatLog {
      *
      * @implNote
      * <ol>
-     *   <li> Checks if the file at {@link #PATH} exists.
-     *   <li> If it doesn't exist, {@code rawData} just uses {@link Data#EMPTY_DATA}.
-     *   <li> If it does exist, it will convert the ChatLog file to UTF-8 if it isn't already and save it to {@code rawData}.
-     *   <li> If {@code rawData} contains invalid data, resets {@link #data} to a default, empty {@link Data} object.
-     *   <li> Then it uses {@link #GSON} to convert {@code rawData} into a usable {@link Data} object.
-     *   <li> Removes any overflowing messages.
-     *   <li> If it successfully resolved, then returns and logs a message.
+     *   <li>Checks if the file at {@link #PATH} exists.</li>
+     *   <li>If it doesn't exist, sets {@link #data} to an empty object and returns.</li>
+     *   <li>If it does exist, converts the ChatLog file to UTF-8 if necessary and loads it into {@code rawData}.</li>
+     *   <li>If {@code rawData} contains invalid data, resets {@link #data}.</li>
+     *   <li>Transforms any legacy UUID int arrays into a stringified format</li>
+     *   <li>Then uses {@link Data#CODEC} to parse {@code rawData} into a usable {@link Data} object.</li>
+     *   <li>Removes any overflowing messages.</li>
+     *   <li>If any errors are thrown, logs the issue and backs up the broken file just in case.</li>
+     *   <li>Otherwise, logs a message noting how many entries were loaded.</li>
+     * </ol>
      */
     public static void deserialize() {
         String rawData = Data.EMPTY_DATA;
 
+        long start = System.currentTimeMillis();
+        LOGGER.info("[ChatLog.deserialize] Reading...");
+
         if(Files.exists(PATH)) {
             try {
                 rawData = Files.readString(PATH);
-
             } catch(MalformedInputException notUTF8) { // thrown if the file is not encoded with UTF-8
-                ChatPatches.LOGGER.warn("[ChatLog.deserialize] ChatLog file encoding was '{}', not UTF-8. Complex text characters may have been replaced with question marks.", Charset.defaultCharset().name());
+                LOGGER.warn("[ChatLog.deserialize] Chat log file encoding was '{}', not UTF-8. Complex text characters may have been replaced with question marks.", Charset.defaultCharset().name());
 
                 try {
                     // force-writes the string as UTF-8
@@ -89,111 +115,135 @@ public class ChatLog {
                     rawData = Files.readString(PATH);
 
                 } catch(IOException ioexc) {
-                    ChatPatches.LOGGER.error("[ChatLog.deserialize] Couldn't rewrite the ChatLog at '{}', resetting:", PATH, ioexc);
+                    LOGGER.error("[ChatLog.deserialize] Couldn't rewrite the chat log at '{}', resetting:", PATH, ioexc);
 
                     // final attempt to reset the file
                     try {
                         rawData = Data.EMPTY_DATA; // just in case of corruption from previous failures
                         Files.writeString(PATH, Data.EMPTY_DATA, StandardOpenOption.TRUNCATE_EXISTING);
                     } catch(IOException ioerr) {
-                        ChatPatches.LOGGER.error("[ChatLog.deserialize] Couldn't reset the ChatLog at '{}':", PATH, ioerr);
+                        LOGGER.error("[ChatLog.deserialize] Couldn't reset the chat log at '{}':", PATH, ioerr);
                     }
                 }
 
             } catch(IOException e) {
-                ChatPatches.LOGGER.error("[ChatLog.deserialize] Couldn't access the ChatLog at '{}':", PATH, e);
+                LOGGER.error("[ChatLog.deserialize] Couldn't access the chat log at '{}':", PATH, e);
                 rawData = Data.EMPTY_DATA; // just in case of corruption from failures
             }
         } else {
-            data = new Data();
-            loaded = true;
-            return;
+            // intentionally creates invalid data to prompt the next if block to
+            // generate a blank one and log it, instead of it happening twice
+            rawData = "";
         }
 
 
-        // if the file has invalid data (doesn't start with a '{'), reset it
+        // ignore invalid files
         if( rawData.length() < 2 || !rawData.startsWith("{") ) {
-            data = new Data();
-            loaded = true;
-
+            data = new Data(true);
+            LOGGER.info("[ChatLog.deserialize] No chat log found at '{}', generated a blank one for {} initial messages in {} seconds",
+                PATH, Data.DEFAULT_SIZE, (System.currentTimeMillis() - start) / 1000.0
+            );
             return;
         }
 
         try {
-            data = GSON.fromJson(rawData, Data.class);
-            removeOverflowData();
-        } catch(com.google.gson.JsonSyntaxException e) {
-            ChatPatches.LOGGER.error("[ChatLog.deserialize] Tried to read the ChatLog and found an error, loading an empty one: ", e);
+            JsonObject jsonData = JsonHelper.deserialize(rawData);
+            data = Data.CODEC.parse(ChatPatches.jsonOps(), jsonData).resultOrPartial(e -> {
+                throw new JsonSyntaxException(e);
+            }).orElseThrow();
 
-            data = new Data();
+            // the sublist indices make sure to only keep the newest data and remove the oldest
+            // NOTE: the chat log system has the oldest messages at 0, but vanilla has the newest at 0
+            if(messageCount() > config.chatMaxMessages)
+                data.messages = (ArrayList<Text>)data.messages.subList( messageCount() - config.chatMaxMessages, messageCount() );
+            if(historyCount() > config.chatMaxMessages)
+                data.history = (ArrayList<String>)data.history.subList( historyCount() - config.chatMaxMessages, historyCount() );
+
             loaded = true;
+        } catch(Exception e) {
+            LOGGER.error("[ChatLog.deserialize] Tried to read the chat log and found an error, backing it up and loading an empty one:", e);
+
+            backup();
+
+            data = new Data(true);
             return;
         }
 
-        loaded = true;
-
-        ChatPatches.LOGGER.info("[ChatLog.deserialize] Read the chat log containing {} messages and {} sent messages from '{}'",
-			data.messages.size(), data.history.size(),
-            PATH
-		);
+        LOGGER.info("[ChatLog.deserialize] Read the chat log containing {} messages and {} sent messages from '{}' in {} seconds",
+            messageCount(), historyCount(), PATH, (System.currentTimeMillis() - start) / 1000.0
+        );
     }
 
     /**
-     * Saves the chat log to {@link #PATH}. Only saves if {@link Config#chatlog} is true,
-     * it isn't crashing again, and if there is *new* data to save.
-     *
-     * @param crashing If the game is crashing. If true, it will only save if {@link #savedAfterCrash}
-     * is false AND if {@link Config#chatlogSaveInterval} is 0.
+     * Saves the chat log to {@link #PATH}. Only saves if {@link Config#chatlog} is true
+     * and if there is *new* data to save. <i>As of 1.20.5, also requires the player to
+     * be in-game during the saving process, so the registry-synced TextCodec can be
+     * used (#180).</i>
      */
-    public static void serialize(boolean crashing) {
+    public static void serialize() {
         if(!config.chatlog)
-            return;
-        if(crashing && savedAfterCrash)
             return;
         if(data.messages.isEmpty() && data.history.isEmpty())
             return; // don't overwrite the file with an empty one if there's nothing to save
+        if(messageCount() == lastMessageCount && historyCount() == lastHistoryCount)
+            return; // don't save if there's no new data
 
-        if(data.messages.size() == lastMessageCount && data.history.size() == lastHistoryCount)
-            return; // don't save if there's no new data AND if the path is the default one (not a backup)
+        long start = System.currentTimeMillis();
+        LOGGER.info("[ChatLog.serialize] Saving...");
 
-        removeOverflowData(); // don't save more than the max amount of messages
+
+        // catch the NPE and cancel IF it's thrown
+        DynamicOps<JsonElement> registeredOps;
+        try {
+            registeredOps = ChatPatches.jsonOps();
+        } catch(NullPointerException npe) {
+            ChatPatches.logReportMsg(npe);
+            dumpData();
+            return;
+        }
 
         try {
-            final String str = GSON.toJson(data, Data.class);
-            Files.writeString(PATH, str, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
+            JsonElement json = Data.CODEC.encodeStart(registeredOps, data)
+                .resultOrPartial(e -> ChatPatches.logReportMsg(new JsonParseException(e)))
+                .orElseThrow();
 
-            lastHistoryCount = data.history.size();
-            lastMessageCount = data.messages.size();
+            Files.writeString(PATH, JsonHelper.toSortedString(json), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
 
-            ChatPatches.LOGGER.info("[ChatLog.serialize] Saved the chat log containing {} messages and {} sent messages to '{}'", data.messages.size(), data.history.size(), PATH);
-        } catch(IOException e) {
-            ChatPatches.LOGGER.error("[ChatLog.serialize] An I/O error occurred while trying to save the chat log:", e);
+            lastHistoryCount = historyCount();
+            lastMessageCount = messageCount();
+            LOGGER.info("[ChatLog.serialize] Saved the chat log containing {} messages and {} sent messages to '{}' in {} seconds",
+                messageCount(), historyCount(), PATH, (System.currentTimeMillis() - start) / 1000.0
+            );
 
-        } finally {
-            if(crashing)
-                savedAfterCrash = true;
+            // temporarily removed the ugly ConcurrentModificationException catch block bc it's ugly and not a real solution:
+            // fixme!
+
+        } catch(IOException | RuntimeException e) {
+            LOGGER.error("[ChatLog.serialize] An I/O or unexpected runtime error occurred while trying to save the chat log:", e);
+            dumpData();
         }
     }
 
+
     /**
      * Creates a backup of the current chat log file
-     * located at {@link #PATH} and saves it
-     * as "chatlog_" + current time + ".json" in the
-     * same directory as the original file.
-     * If an error occurs, a warning will be logged.
+     * located at {@link #PATH} and saves it as
+     * {@code chatlog_${current_time}.json} in the
+     * same directory as the original file. If an
+     * error occurs, a warning will be logged.
      * Doesn't modify the current chat log.
      */
     public static void backup() {
-		try {
-            Files.copy(PATH, PATH.resolveSibling( "chatlog_" + ChatPatches.TIME_FORMATTER.get() + ".json" ));
-		} catch(IOException e) {
-			ChatPatches.LOGGER.warn("[ChatLog.backup] Couldn't backup the chat log at '{}':", PATH, e);
-		}
-	}
+        try {
+            Files.copy(PATH, PATH.resolveSibling( "chatlog_" + Util.getFormattedCurrentTime() + ".json" ));
+        } catch(IOException e) {
+            LOGGER.warn("[ChatLog.backup] Couldn't backup the chat log at '{}':", PATH, e);
+        }
+    }
 
     /** Restores the chat log from {@link #data} into Minecraft. */
     public static void restore(MinecraftClient client) {
-        Flags.LOADING_CHATLOG.raise();
+        restoring = true;
 
         if(!data.history.isEmpty())
             data.history.forEach(client.inGameHud.getChatHud()::addToMessageHistory);
@@ -201,9 +251,9 @@ public class ChatLog {
         if(!data.messages.isEmpty())
             data.messages.forEach(msg -> client.inGameHud.getChatHud().addMessage(msg, null, RESTORED_TEXT));
 
-        Flags.LOADING_CHATLOG.lower();
+        restoring = false;
 
-        ChatPatches.LOGGER.info("[ChatLog.restore] Restored {} messages and {} history messages from '{}' into Minecraft!", data.messages.size(), data.history.size(), PATH);
+        LOGGER.info("[ChatLog.restore] Restored {} messages and {} history messages from '{}' into Minecraft!", messageCount(), historyCount(), PATH);
     }
 
     /**
@@ -220,7 +270,7 @@ public class ChatLog {
      */
     public static void tickSaveCounter() {
         if(config.chatlogSaveInterval > 0 && ticksUntilSave == 0)
-            serialize(false);
+            serialize();
 
         ticksUntilSave--;
 
@@ -228,27 +278,41 @@ public class ChatLog {
             ticksUntilSave = config.chatlogSaveInterval * 60 * 20;
     }
 
+    /**
+     * Dumps chat log data into the debug log. Note:
+     * Assumes the Text codec is unusable, so instead
+     * maps each message using {@link Text#getString()}.
+     */
+    @SuppressWarnings("StringConcatenationArgumentToLogCall")
+    public static void dumpData() {
+        LOGGER.debug("[ChatLog.dumpData] " + Data.EMPTY_DATA.replaceAll("\\[]", "{}"), data.history, data.messages.stream().map(Text::getString).toList());
+    }
+
+
     public static void addMessage(Text msg) {
-        if(data.messages.size() > config.chatMaxMessages)
-            data.messages.remove(0);
+        if(restoring)
+            return;
+        if(messageCount() > config.chatMaxMessages)
+            data.messages.removeFirst();
 
         data.messages.add(msg);
     }
     public static void addHistory(String msg) {
-        if(data.history.size() > config.chatMaxMessages)
-            data.history.remove(0);
+        if(restoring)
+            return;
+        if(historyCount() > config.chatMaxMessages)
+            data.history.removeFirst();
 
         data.history.add(msg);
     }
 
-    public static void removeOverflowData() {
-        // the sublist indices make sure to only keep the newest data and remove the oldest
-        if(data.messages.size() > config.chatMaxMessages)
-            data.messages = data.messages.subList( data.messages.size() - config.chatMaxMessages, data.messages.size() );
-
-        if(data.history.size() > config.chatMaxMessages)
-            data.history = data.history.subList( data.history.size() - config.chatMaxMessages, data.history.size() );
-    }
+    /**
+     * Returns if the chat log is currently
+     * being restored into the chat. Used
+     * to prevent logging and modifying
+     * restored messages.
+     */
+    public static boolean isRestoring() { return restoring; }
 
     public static void clearMessages() {
         data.messages.clear();
